k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: LoadBalancer  # or NodePort
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 3000       # External port
      targetPort: 3000 # Port in container
